...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DF3-Ub-r8A" customClass="RoundedWhiteButton" customModule="FirebaseApp" customModuleProvider="target">
                                <rect key="frame" x="24" y="499" width="327" height="64"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="login-btn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="Muo-w0-rKM"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" red="0.36621599739999999" green="0.27452576909999998" blue="0.1215587716" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                    </segue>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cG9-g3-oLn" customClass="RoundedWhiteButton" customModule="FirebaseApp" customModuleProvider="target">
                                <rect key="frame" x="24" y="579" width="327" height="64"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="sign-up-btn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="nzO-tu-dSe"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" red="0.36621599739999999" green="0.27452576909999998" blue="0.1215587716" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                    <constraint firstAttribute="bottom" secondItem="7Gb-fa-797" secondAttribute="bottom" id="M08-sc-AnA"/>
                                    <constraint firstItem="7Gb-fa-797" firstAttribute="top" secondItem="y9W-KN-WFI" secondAttribute="top" id="THg-3d-9wN"/>
                                </constraints>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dpD-rs-QKD">
                                <rect key="frame" x="0.0" y="20" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" label="back"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="dpD-rs-QKD" secondAttribute="height" multiplier="1:1" id="9vH-Ef-7Gs"/>
                                    <constraint firstAttribute="height" constant="44" id="O4j-MO-8jf"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" image="backArrow"/>
...
